    - Disable a number of additional drivers unlikely to be found in
      cloud environments

  [ Ben Hutchings ]
  * drm: Disable DRM_LEGACY (DRI1)
  * Bump ABI to 2
  * WireGuard: Update for renaming of skb_reset_tc() to skb_reset_redirect()

  [ Sudip Mukherjee ]
  * Remove libbpf. (See: #948041)

  [ Jason A. Donenfeld ]
  * Provide wireguard-modules as stop-gap for packages.

 -- Noah Meyerhans <noahm@debian.org>  Wed, 01 Apr 2020 10:39:48 -0700

linux (5.5.13-2) unstable; urgency=medium

  * bpf: Undo incorrect __reg_bound_offset32 handling (CVE-2020-8835)

 -- Salvatore Bonaccorso <carnil@debian.org>  Mon, 30 Mar 2020 23:06:57 +0200

linux (5.5.13-1) unstable; urgency=medium

  * New upstream release: https://kernelnewbies.org/Linux_5.5
    (Closes: #953680)
  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.1
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.2
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.3
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.4
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.5
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.6
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.7
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.8
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.9
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.10
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.11
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.12
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.13

  [ Ben Hutchings ]
  * aufs: Update support patchset to aufs5.x-rcN 20200120; no functional
    change
  * net: Enable NET_SWITCHDEV; disable on armel/marvell (Closes: #949863)
  * [armhf] net/ethernet/ti: Enable TI_CPSW_SWITCHDEV as module; enable TI_CPTS
  * wireless: Enable regulatory.db direct loading: