@@ -2,7 +2,9 @@ Package: linux-cpupower
 Build-Profiles: <!stage1 !pkg.linux.notools>
 Section: admin
 Architecture: linux-any
-Build-Depends: libpci-dev
+Build-Depends:
+  libcap-dev,
+  libpci-dev,
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: CPU power management tools for Linux
  The cpupower command allows inspection and control of cpufreq and
