@@ -284,6 +284,9 @@ linux (5.5.17-1) UNRELEASED; urgency=medium
   [ Jason A. Donenfeld ]
   * Provide wireguard-modules as stop-gap for packages.
 
+  [ Christian Barcenas ]
+  * linux-cpupower: Add libcap to Build-Depends and turbostat linker flags
+
  -- Noah Meyerhans <noahm@debian.org>  Wed, 01 Apr 2020 10:39:48 -0700
 
 linux (5.5.13-2) unstable; urgency=medium
